--- a/contact.htm
+++ b/contact.htm
@@ -15,7 +15,7 @@
             a{text-decoration:none;color:rgb(0, 119, 255);}
             footer{background-color: gray;color:white}
         </style>
-        <a href='https://space.bilibili.com/588672425'><img src='assets/bilibili.jfjf'></a>
+        <a href='https://space.bilibili.com/588672425'><img src='assets/bilibili.jfif'></a>
         <a href='https://weibo.com/p/1005057625534975'><img src='assets/weibo.jpg'></a>
     </head>
     <footer>
