--- a/polog.html
+++ b/polog.html
@@ -19,8 +19,16 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
-        <h2>FCUOS 2017 21w10c</h2>
-        <p style="color: green;">|正式版|</p>
+        <h2>FCUOS 2018 Snapshot 22w10a</h2>
+        <p style="color: green;">|较大更新|</p>
+        <p style="color: green;">|稳定版本|</p>
+        <h3>更新内容:</h3>
+        <p>新增配置，UI优化</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/iNk3Crkpvud'><button>下载</button></a>
+        <hr>
+        <h2>FCUOS 2017 Snapshot 21w10c</h2>
+        <p style="color: green;">|快照版|</p>
         <h3>更新内容:</h3>
         <p>新增搜索与Windows，将记事本数量增加到8个</p>
         <br>
