--- a/virtualswitch/download.html
+++ b/virtualswitch/download.html
@@ -1,73 +1,27 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link href="assets/logo2.png" rel="shortcut icon"/>
-        <p style='color:orange;'>我的网站升级啦！</p>
-        <style type="text/css">
-            a{text-decoration:none;color:black;}
-            footer{background-color: gray;color:white}
-        </style>
-        <!--导航栏-->
-        <div id='nav'>
-            <style>
-              * {
-                  margin: 0;  // *是通配选择器  选择所有的标签
-                  padding: 0;
-              }
-              ul {
-                      list-style: none;
-                  }
-              .nav li {
-                  float: left;
-                  margin: 0 10px;
-              }
-            </style>
-            <title>Fangcat</title>
-            <img height="40" width='120' src='/assets/logo.png'>
-            <hr>
-            <h3><ul>
-              <li><a href='/index.html' style='color:black;'>首页</a></li>
-              <li><a href='/pptos.html'style='color:black;'>PPTOS</a></li>
-              <li><a href='/bugs/index.html'style='color:black;'>Bugs</a></li>
-              <li><a href='/contact.htm'style='color:black;'>联系我</a></li>
-            </ul></h3>
-            <hr>
-        </div>
-    </head>
-    <body>
-        <hr>
-        <a href='download.html' style='color: black;'><h4>Download</h4></a>
-        <hr>
-        <h1>虚拟Switch更新日志:</h1>
-        <hr>
-        <h2>Virtual Switch 1.1 WithGame</h2>
-        <p style='color: green;'>-Latest-</p>
-        <p>内容:</p>
-        <p>1.新游戏!Minecraft(Alpha 1.4)</p>
-        <p>2.PIN硬件链接更改</p>
-        <a style="color: green;" href='versions/Virtual Switch V1.1.sb3'>Click To Get!</a>
-        <hr>
-        <h2>Virtual Switch 1.0</h2>
-        <p style='color:brown;'>-Oldest-</p>
-        <p>内容:</p>
-        <p>第一个发行版</p>
-        <a style="color: crimson;" href='versions/Virtual Switch V1.0.sb3'>Click To Get!</a>
-        <hr>
-        <h2>Virtual Switch 0.1</h2>
-        <p style='color:brown;'>-Oldest- -Beta Version-</p>
-        <p>Updates:</p>
-        <p>NaN</p>
-        <p style="color: crimson;">Sorry,This version was lost</p>
-        <hr>
-    </body>
-    <footer>
-        <style>
-            a{color:white}
-        </style>
-        <hr>
-        <h2>联系我</h2>
-        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com'>点我</a>或发送邮件给f20091219@outlook.com</p>
-        <h2>友情链接</h2>
-        <a href='http://gitee.com'>Gitee</a>
-    </footer>
-</html>
+<!--本页面来自404.life-->
+<!DOCTYPE HTML>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<title>该页面不存在</title>
+<link rel="shortcut icon" href="assets/logo2.png">
+</head>
+
+<body>
+<div class="box">
+
+
+	<!-- <div class="box_nofound_wrap">
+		<div class="box_nofound_content">
+			<p class="nofound_img_warp"></p>
+			<div class="nofound_text">很抱歉，您访问的页面不存在！</div>
+			<div class="nofound_text">请仔细检查您输入的网址是否正确。</div>
+			<a class="nofound_link" href="https://404.life" >返回首页</a>
+		</div>
+	</div> -->
+
+<div class='newContent'>			<p><br/></p><p><br/></p><p><br/></p><p><br/></p><p><br/></p>			<p style='text-align:center;'><img src='/pageNotFound.png' alt=''></img></p>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>很抱歉，您访问的页面不存在！</div>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>请仔细检查您输入的网址是否正确。</div>			<a href='index.html' style='text-align:center; color:#333; font-size:13px; text-decoration:none; width:100px; height:32px; line-height:32px; border:1px solid #E3E2E8; display:block; margin:30px auto;'>返回首页</a>			<p><br/>		</p></div>
+
+
+</div>
+</body>
