--- a/virtualswitch/index.html
+++ b/virtualswitch/index.html
@@ -8,29 +8,11 @@
             footer{background-color: gray;color:white}
         </style>
         <!--导航栏-->
-        <div id='nav'>
-            <style>
-              * {
-                  margin: 0;  // *是通配选择器  选择所有的标签
-                  padding: 0;
-              }
-              ul {
-                      list-style: none;
-                  }
-              .nav li {
-                  float: left;
-                  margin: 0 10px;
-              }
-            </style>
+        <div>
             <title>Fangcat</title>
             <img height="40" width='120' src='/assets/logo.png'>
             <hr>
-            <h3><ul>
-              <li><a href='/index.html' style='color:black;'>首页</a></li>
-              <li><a href='/pptos.html'style='color:black;'>PPTOS</a></li>
-              <li><a href='/bugs/index.html'style='color:black;'>Bugs</a></li>
-              <li><a href='/contact.htm'style='color:black;'>联系我</a></li>
-            </ul></h3>
+            <h3><a href='/index.html' style='color:black;'>首页</a>   <a href='/pptos.html'style='color:black;'>PPTOS</a>   <a href='/bugs/index.html'style='color:black;'>Bugs</a>   <a href='/contact.htm'style='color:black;'>联系我</a></h3>
             <hr>
         </div>
     </head>
