--- a/bugs/index.html
+++ b/bugs/index.html
@@ -7,32 +7,10 @@
             a{text-decoration:none;color:black;}
             footer{background-color: gray;color:white}
         </style>
-        <!--导航栏-->
-        <div id='nav'>
-            <style>
-              * {
-                  margin: 0;  // *是通配选择器  选择所有的标签
-                  padding: 0;
-              }
-              ul {
-                      list-style: none;
-                  }
-              .nav li {
-                  float: left;
-                  margin: 0 10px;
-              }
-            </style>
-            <title>Fangcat</title>
-            <img height="40" width='120' src='/assets/logo.png'>
-            <hr>
-            <h3><ul>
-              <li><a href='/index.html' style='color:black;'>首页</a></li>
-              <li><a href='/pptos.html'style='color:black;'>PPTOS</a></li>
-              <li><a href='/bugs/index.html'style='color:black;'>Bugs</a></li>
-              <li><a href='/contact.htm'style='color:black;'>联系我</a></li>
-            </ul></h3>
-            <hr>
-        </div>
+        <title>Fangcat</title>
+        <a href='index.html'><img height="60" width='120' src='assets/logo.png'></a>
+        <h3><a href='/' style='color:black;'>回到首页</a></h3>
+        <hr>
     </head>
     <body>
         <h1>Fangcat BUGS Report Center</h1>
