--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
   </script>
         <h2>我的作品</h2>
         <p>点击以访问作品介绍页</p>
+        <nobr>
         <h2 style="text-align:left;">OS</h2>
         <h3 style="text-align:left;"><a href='pptos.html' style='color: black;'>FCUOS</a><br><a href='https://gitee.com/fcnemo/fcwos' style='color: black;'>FCWOS</a><a href='fcwos/index.html'><button>在线预览</button></a><br><a href='nosite.html' style='color: black;'>Fangcat Watch</a></h3>
         <h2 style='text-align:center;'>Python</h2>
         <h3 style="text-align:center;"><a href='remake.html' style='color: black;'>Wormy Remake</a></h3>
         <h2 style='text-align:right;'>Others</h2>
         <h3 style="text-align:right"><a href='virtualswitch/index.html' style='color: black;'>Virtual Switch</a><br><a href='https://gitee.com/fcnemo/hbc' style='color: black;'>Hypixel Bedwars Chinese</a><br><a href='nosite.html' style='color: black;'>Minecraft RE</a></h3>
+        </nobr>
     </body>
     <footer>
         <style>
