--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -12,7 +12,7 @@
             <title>方方云盘——Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <h3><a href='index.html' style='color:black;'>首页</a>   <a href='pptos.html'style='color:black;'>PPTOS</a>   <a href='bugs/index.html'style='color:black;'>Bugs</a>   <a href='contact.htm'style='color:black;'>联系我</a></h3>
+            <h3><a href='/index.html' style='color:black;'>首页</a>   <a href='/pptos.html'style='color:black;'>PPTOS</a>   <a href='/bugs/index.html'style='color:black;'>Bugs</a>   <a href='/contact.htm'style='color:black;'>联系我</a></h3>
             <hr>
         </div>
     </head>
