--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -6,6 +6,17 @@
         <style type="text/css">
             a{text-decoration:none;color:black;}
             footer{background-color: gray;color:white}
+            db{
+                width:200px;
+                height:50px;
+                color:skyblue;
+                border-color:skyblue;
+            }
+            vips{
+                color:red;
+                border-color:red;
+                background-color:red;
+            }
         </style>
         <!--导航栏-->
         <div>
@@ -17,13 +28,16 @@
         </div>
     </head>
     <body>
+        <div style="background-color: #ddffff!important;padding: 14px;border-left: 6px solid #ccc!important;border-color: #2196F3!important;">
         <h3>我的世界树莓派版v0.1.1</h3>
         <h4>归档</h4>
         <p>上传者：<button style='color:red;'>SVIP</button>Fangcat(云盘官方)</p>
         <p>版权方：Mojang</p>
-        <hr>
-        <img src='http://www.icosky.com/icon/png/File%20Type/Leopard%20Archive%20Files%20Icons/bah%20tar.png' style='align:center;'>
-        <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button style='align:center;'>下载</button></a>
+        </div>
+        <div style='align:center'>
+        <img src='http://www.icosky.com/icon/png/File%20Type/Leopard%20Archive%20Files%20Icons/bah%20tar.png'>
+        <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button class='db'>下载</button></a>
+        </div>
     </body>
     <footer>
         <style>
