--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -6,22 +6,11 @@
         <style type="text/css">
             a{text-decoration:none;color:black;}
             footer{background-color: gray;color:white}
-            db{
-                width:200px;
-                height:50px;
-                color:skyblue;
-                border-color:skyblue;
-            }
-            vips{
-                color:red;
-                border-color:red;
-                background-color:red;
-            }
         </style>
         <!--导航栏-->
         <div>
             <title>方方云盘——Fangcat</title>
-            <img height="40" width='120' src='assets/logo.png'>
+            <img height="40" width='120' src='/assets/logo.png'>
             <hr>
             <h3><a href='/index.html' style='color:black;'>首页</a>   <a href='/pptos.html'style='color:black;'>PPTOS</a>   <a href='/bugs/index.html'style='color:black;'>Bugs</a>   <a href='/contact.htm'style='color:black;'>联系我</a></h3>
             <hr>
@@ -31,12 +20,17 @@
         <div style="background-color: #ddffff!important;padding: 14px;border-left: 6px solid #ccc!important;border-color: #2196F3!important;">
         <h3>我的世界树莓派版v0.1.1</h3>
         <h4>归档</h4>
-        <p>上传者：<button style='color:red;'>SVIP</button>Fangcat(云盘官方)</p>
+        <p>上传者：<button style='                color:red;
+                border-color:red;
+                background-color:red;'>SVIP</button>Fangcat(云盘官方)</p>
         <p>版权方：Mojang</p>
         </div>
         <div style='align:center'>
         <img src='http://www.icosky.com/icon/png/File%20Type/Leopard%20Archive%20Files%20Icons/bah%20tar.png'>
-        <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button class='db'>下载</button></a>
+        <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button style='                width:200px;
+                height:50px;
+                color:skyblue;
+                border-color:skyblue;'>下载</button></a>
         </div>
     </body>
     <footer>
