--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -20,13 +20,14 @@
         <div style="background-color: #ddffff!important;padding: 14px;border-left: 6px solid #ccc!important;border-color: #2196F3!important;">
         <h3>我的世界树莓派版v0.1.1</h3>
         <h4>归档</h4>
-        <p>上传者：<button style='                color:red;
+        <p>上传者：<button style='                color:yellow;
                 border-color:red;
                 background-color:red;'>SVIP</button>Fangcat(云盘官方)</p>
         <p>版权方：Mojang</p>
         </div>
         <div style='align:center'>
-        <img src='http://www.icosky.com/icon/png/File%20Type/Leopard%20Archive%20Files%20Icons/bah%20tar.png'>
+        <img src='assets/bah tar.png'>
+        <hr>
         <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button style='                width:200px;
                 height:50px;
                 color:skyblue;
