--- a/pan/forown/links/pywormy.html
+++ b/pan/forown/links/pywormy.html
@@ -28,10 +28,14 @@
         <div style='align:center'>
         <img src='assets/py.jpeg'>
         <hr>
-        <a href='/pan/forown/files/wormy.py'><button style='                width:200px;
+        <a href='https://gitee.com/fcnemo/wormy-remake/blob/master/wormyremake.py'><button style='                width:200px;
                 height:50px;
                 color:skyblue;
-                border-color:skyblue;'>下载</button></a>
+                border-color:skyblue;'>下载(Gitee外部仓库)</button></a>
+        <a href='https://pan.baidu.com/s/1vpgXTaBP-WUaASzlcb4__Q'><button style='                width:200px;
+                height:50px;
+                color:skyblue;
+                border-color:skyblue;'>下载(百度网盘)</button></a>
         </div>
     </body>
     <footer>
