--- a/pan/forown/links/pywormy.html
+++ b/pan/forown/links/pywormy.html
@@ -24,6 +24,7 @@
                 border-color:red;
                 background-color:red;'>SVIP</button>Fangcat(云盘官方)</p>
         <p>版权方：原作者与我</p>
+        <p>百度云提取码：fang</p>
         </div>
         <div style='align:center'>
         <img src='assets/py.jpeg'>
