--- a/remake.html
+++ b/remake.html
@@ -23,9 +23,7 @@
         <a href='http://inventwithpython.com/pygame/'><button>作者官网</button></a>
         <p>需要的软件：Python</p>
         <p>需要的库：Pygame/Easygui</p>
-        <p>提取码：fang</p>
-        <a href='https://pan.baidu.com/s/1vpgXTaBP-WUaASzlcb4__Q'><button>即刻下载</button></a>
-        <a href='https://gitee.com/fcnemo/wormy-remake/blob/master/wormyremake.py'><button>不限速下载</button></a>
+        <a href='/pan/forown/links/pywormy.html'><button>即刻下载（方方云盘下载）</button></a>
     </body>
     <footer>
         <style>
