--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -26,7 +26,7 @@
         <p>版权方：Mojang</p>
         </div>
         <div style='align:center'>
-        <img src='assets/bah tar.png'>
+        <img src='/pan/forown/assets/bah tar.png'>
         <hr>
         <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button style='                width:200px;
                 height:50px;
