--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -30,8 +30,8 @@
         <hr>
         <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button style='                width:200px;
                 height:50px;
-                color:skyblue;
-                border-color:skyblue;'>下载</button></a>
+                color:#2196F3;
+                border-color:#2196F3;'>下载</button></a>
         </div>
     </body>
     <footer>
