--- a/pan/forown/links/mcpi.html
+++ b/pan/forown/links/mcpi.html
@@ -31,7 +31,7 @@
         <a href='/pan/forown/archives/minecraft-pi-0.1.1.tar.gz'><button style='                width:200px;
                 height:50px;
                 color:#2196F3;
-                border-color:#2196F3;'>下载</button></a>
+                border-color:#2196F3;'>下载(站內)</button></a>
         </div>
     </body>
     <footer>
