--- a/pan/forown/links/pywormy.html
+++ b/pan/forown/links/pywormy.html
@@ -27,16 +27,16 @@
         <p>百度云提取码：fang</p>
         </div>
         <div style='align:center'>
-        <img src='assets/py.jpeg'>
+        <img src='/pan/forown/assets/py.jpeg'>
         <hr>
         <a href='https://gitee.com/fcnemo/wormy-remake/blob/master/wormyremake.py'><button style='                width:200px;
                 height:50px;
-                color:skyblue;
-                border-color:skyblue;'>下载(Gitee外部仓库)</button></a>
+                color:#2196F3;
+                border-color:#2196F3;'>下载(Gitee外部仓库)</button></a>
         <a href='https://pan.baidu.com/s/1vpgXTaBP-WUaASzlcb4__Q'><button style='                width:200px;
                 height:50px;
-                color:skyblue;
-                border-color:skyblue;'>下载(百度网盘)</button></a>
+                color:#2196F3;
+                border-color:#2196F3;'>下载(百度网盘)</button></a>
         </div>
     </body>
     <footer>
