--- a/pan/forown/links/pywormy.html
+++ b/pan/forown/links/pywormy.html
@@ -27,7 +27,7 @@
         <p>百度云提取码：fang</p>
         </div>
         <div style='align:center'>
-        <img src='/pan/forown/assets/py.jpeg'>
+        <img src='/pan/forown/assets/py.jpeg' height='200' width='200'>
         <hr>
         <a href='https://gitee.com/fcnemo/wormy-remake/blob/master/wormyremake.py'><button style='                width:200px;
                 height:50px;
