--- a/pan/index.html
+++ b/pan/index.html
@@ -20,8 +20,7 @@
         <div style="background-color: #ddffff!important;padding: 14px;border-left: 6px solid #ccc!important;border-color: #2196F3!important;">
         <h1>方方云盘</h1>
         <p>云盘当前暂不允许免费上传大文件，因为Gitee有仓库大小限额，Gitee重新允许启动新Pages后方可上传512M以内文件</p>
-        <br>
-        <a href='upload.html'>我也要上传文件</a>
+        <a href='upload.html' style='color:blue;'>我也要上传文件</a>
         </div>
         <h2>今日热门资源</h2>
         <div id='hot-source'>
