--- a/polog.html
+++ b/polog.html
@@ -19,6 +19,13 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
+        <h2>FCUOS 2018 Release</h2>
+        <p style="color: green;">|正式版|</p>
+        <h3>更新内容:</h3>
+        <p>新增小组件，UI优化，其他自己摸索</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/inwx0s3t20h'><button>下载</button></a>
+        <hr>
         <h2>FCUOS 2018 Snapshot 22w10a</h2>
         <p style="color: green;">|较大更新|</p>
         <p style="color: green;">|稳定版本|</p>
