--- a/polog.html
+++ b/polog.html
@@ -19,6 +19,13 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
+        <h2>FCUOS N (Insider Version)</h2>
+        <p style="color: green;">|N|</p>
+        <h3>更新内容:</h3>
+        <p>$%&&@&*#^!&$$^%!!&%&!!$%@&#@@^&!%@!%!$%$##%*&%%*$%!$*#&^#&@!#%*^^@!#&$%#%*^*$@$$#$#^#$@@@%%#%%^%^$@</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/iNFBWs6m8va'><button>下载</button></a>
+        <hr>
         <h2>FCUOS 2018 Release</h2>
         <p style="color: green;">|正式版|</p>
         <h3>更新内容:</h3>
