--- a/app.htm
+++ b/app.htm
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,37 +10,16 @@
         <!--导航栏-->
         <div>
             <title>Fangcat</title>
-            <img height="40" width='120' src='/assets/logo.png'>
+            <img height="40" width='120' src='assets/logo.png'>
             <hr>
             <h3><a href='/index.html' style='color:black;'>首页</a>   <a href='/pptos.html'style='color:black;'>PPTOS</a>   <a href='/bugs/index.html'style='color:black;'>Bugs</a   <a href='/app.htm'style='color:black;'>APP</a>   <a href='/contact.htm'style='color:black;'>联系我</a></h3>
             <hr>
         </div>
     </head>
     <body>
-        <hr>
-        <a href='download.html' style='color: black;'><h4>Download</h4></a>
-        <hr>
-        <h1>虚拟Switch更新日志:</h1>
-        <hr>
-        <h2>Virtual Switch 1.1 WithGame</h2>
-        <p style='color: green;'>-Latest-</p>
-        <p>内容:</p>
-        <p>1.新游戏!Minecraft(Alpha 1.4)</p>
-        <p>2.PIN硬件链接更改</p>
-        <a style="color: green;" href='versions/Virtual Switch V1.1.sb3'>Click To Get!</a>
-        <hr>
-        <h2>Virtual Switch 1.0</h2>
-        <p style='color:brown;'>-Oldest-</p>
-        <p>内容:</p>
-        <p>第一个发行版</p>
-        <a style="color: crimson;" href='versions/Virtual Switch V1.0.sb3'>Click To Get!</a>
-        <hr>
-        <h2>Virtual Switch 0.1</h2>
-        <p style='color:brown;'>-Oldest- -Beta Version-</p>
-        <p>Updates:</p>
-        <p>NaN</p>
-        <p style="color: crimson;">Sorry,This version was lost</p>
-        <hr>
+        <img src='assets/swift/wmrm.png' height='500' width='1400'>
+        <h1>FangcatAPP</h1>
+        <a href='/pan/forown/links/fcapp.html'><button>即刻下载（方方云盘下载）</button></a>
     </body>
     <footer>
         <style>
