--- a/app.htm
+++ b/app.htm
@@ -19,7 +19,8 @@
     <body>
         <img src='assets/swift/wmrm.png' height='500' width='1400'>
         <h1>FangcatAPP</h1>
-        <a href='/pan/forown/links/fcapp.html'><button>即刻下载（方方云盘下载）</button></a>
+        <p>密码:fcapp</p>
+        <a href='https://fangapp.lanzoui.com/b01ijhied'><button>即刻下载（蓝奏云下载）</button></a>
     </body>
     <footer>
         <style>
