--- a/bugs/index.html
+++ b/bugs/index.html
@@ -9,7 +9,7 @@
         </style>
         <title>Fangcat</title>
         <a href='index.html'><img height="60" width='120' src='assets/logo.png'></a>
-        <h3><a href='/' style='color:black;'>回到首页</a></h3>
+        <h3><a href='/index.html' style='color:black;'>首页</a>   <a href='/pptos.html'style='color:black;'>PPTOS</a>   <a href='/bugs/index.html'style='color:black;'>Bugs</a>   <a href='/app.htm'style='color:black;'>APP</a>   <a href='/contact.htm'style='color:black;'>联系我</a></h3>
         <hr>
     </head>
     <body>
