--- a/app.htm
+++ b/app.htm
@@ -17,7 +17,7 @@
         </div>
     </head>
     <body>
-        <img src='assets/swift/wmrm.png' height='500' width='1400'>
+        <img src='assets/swift/app.png' height='500' width='1400'>
         <h1>FangcatAPP</h1>
         <p>密码:fcapp</p>
         <a href='https://fangapp.lanzoui.com/b01ijhied'><button>即刻下载（蓝奏云下载）</button></a>
