--- a/pan/index.html
+++ b/pan/index.html
@@ -24,6 +24,21 @@
         </div>
         <h2>今日热门资源</h2>
         <div id='hot-source'>
+            <div id='fcuos'>
+                <h3>FCUOS</h3>
+                <h4>文件</h4>
+                <p>上传者：<button style='                color:yellow;
+                border-color:red;
+                background-color:red;'>SVIP</button>Fangcat(云盘官方)</p>
+                <p>版权方：<button style='                color:yellow;
+                border-color:red;
+                background-color:red;'>SVIP</button>Fangcat(云盘官方)</p>
+                <a href='forown/links/fcuos.html'><button style='                width:200px;
+                height:50px;
+                color:#2196F3;
+                border-color:#2196F3;'>查看详情</button></a>
+            </div>
+            <hr>
             <div id='mcpi'>
                 <h3>我的世界树莓派版</h3>
                 <h4>归档</h4>
