--- a/pptos.html
+++ b/pptos.html
@@ -62,9 +62,9 @@
         </div>
         <hr>
         <h2>即刻下载</h2>
-        <a href='https://fangapp.lanzoui.com/b01ifui8b'><button>蓝奏云链接</button></a>
+        <a href='/pan/forown/links/pywormy.html'><button>下载（方方云盘）</button></a>
         <a href='polog.html'><button>更新日志</button></a>
-        <p>下载密码：fangcatnb 演示版本：FCUOS 2015 Release</p>
+        <p>演示版本：FCUOS 2015 Release</p>
         <hr>
         <blockquote style="color: gray;">
             (1) FCUOS推荐使用Office 2019及更高版本，提示是否启用宏时请点击“是”，否则记事本将无法正常运行。<br>(2) 请在提示是否启用加载项时选择“启用”<br>(3) 壁纸来自网络
