--- a/pptos.html
+++ b/pptos.html
@@ -62,7 +62,7 @@
         </div>
         <hr>
         <h2>即刻下载</h2>
-        <a href='/pan/forown/links/pywormy.html'><button>下载（方方云盘）</button></a>
+        <a href='/pan/forown/links/fcuos.html'><button>下载（方方云盘）</button></a>
         <a href='polog.html'><button>更新日志</button></a>
         <p>演示版本：FCUOS 2015 Release</p>
         <hr>
