--- a/pan/forown/links/fcuos.html
+++ b/pan/forown/links/fcuos.html
@@ -29,7 +29,7 @@
         <p>蓝奏云提取码：fangcatnb，百度网盘提取码：fang</p>
         </div>
         <div style='align:center'>
-        <img src='/pan/forown/assets/zip.jfjf' height='200' width='200'>
+        <img src='/pan/forown/assets/zip.jfif' height='200' width='200'>
         <hr>
         <a href='https://fangapp.lanzoui.com/b01ifui8b'><button style='                width:200px;
                 height:50px;
