--- a/polog.html
+++ b/polog.html
@@ -19,6 +19,13 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
+        <h2>FCUOS 2019 Release</h2>
+        <p style="color: green;">|正式版|</p>
+        <h3>更新内容:</h3>
+        <p>UI优化，小工具升级，真实时间显示</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/iSX9os9is8b'><button>下载</button></a>
+        <hr>
         <h2>FCUOS 2019 Snapshot 23w12a</h2>
         <p style="color: green;">|快照版|</p>
         <h3>更新内容:</h3>
