--- a/polog.html
+++ b/polog.html
@@ -19,6 +19,14 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
+        <h2>FCUOS 2021 Release</h2>
+        <p style="color: green;">|正式版| |较大更新| |主题更新|</p>
+        <h3>更新内容:</h3>
+        <p>UI超大优化，跨世纪等级更新（跨越两个大版本，子开发版本4个）</p>
+        <h4 style='color:red;'>轻量，美观，简洁，实用</h4>
+        <br>
+        <a href='https://fangapp.lanzoui.com/iuZphseulqj'><button>下载</button></a>
+        <hr>
         <h2>FCUOS 2019 Release</h2>
         <p style="color: green;">|正式版|</p>
         <h3>更新内容:</h3>
