--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
         <a href='http://gitee.com'>Gitee</a>
         <br>
         <a href='https://www.swiper.com.cn/'>Swiper</a>
+        <br>
+        <h2>开发人员选项</h2>
+        <a href='developer.html'>Fangcat开发计划</a>
+        <br>
     </footer>
 </html>
