--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <head>
         <meta charset="utf-8">
         <link href="assets/logo2.png" rel="shortcut icon"/>
-        <p style='color:orange;'>我的网站升级啦！</p>
+        <p style='color:orange;'>加载卡顿？试着换一换站点！</p>
+        <a><button>国内/亚洲推荐 in China/Asia(Gitee克隆站)</button></a>
+        <a><button>国外/亚洲外推荐 Outside Asia(Github主站)</button></a>
         <style type="text/css">
             a{text-decoration:none;color:black;}
             footer{background-color: gray;color:white}
