--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             a{text-decoration:none;color:black;}
             footer{background-color: gray;color:white}
         </style>
-        <!--导航栏-->
+        <!--导航栏区-->
         <div>
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
