--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!--本页面来自404.life,thx-->
+<!--本页面来自404.life,thanks!-->
 <!DOCTYPE HTML>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
