--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h3><a href="pan/index.html" style="color: black;">方方云盘</a><br><a href="pptos.html" style="color: black;">FCUOS</a></h3>
         </div>
         <h2>OS</h2>
-        <h3><a href="pptos.html" style="color: black;">FCUOS</a><br><a href="https://gitee.com/fcnemo/fcwos" style="color: black;">FCWOS</a><a href="fcwos/index.html"><button>在线预览</button></a><br><a href="nosite.html" style="color: black;">Fangcat Watch</a></h3>
+        <h3><a href="pptos.html" style="color: black;">FCUOS</a><br><a href="fcwos/index.html"><button>在线预览</button></a><br><a href="nosite.html" style="color: black;">Fangcat Watch</a></h3>
         <h2>Python</h2>
         <h3><a href="remake.html" style="color: black;">Wormy Remake</a></h3>
         <h2>Others</h2>
