--- a/webstore.html
+++ b/webstore.html
@@ -17,7 +17,7 @@
         </div>
     </head>
     <body>
-        <h1>FCUOS网上应用商店</h1><p>(1)</p>
+        <h1>FCUOS网上应用商店</h1>
         <hr>
         <div>
           <h2>Minecraft Classic</h2>
