--- a/polog.html
+++ b/polog.html
@@ -19,7 +19,7 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
-        <h2>2022 HNY及以后版本的更新日志请戳：<a href="https://gitee.com/fangcatchina/FCUOS/releases/">Gitee</a><a href='https://github.com/FangcatChina/FCUOS/releases'>Github</a></h2>
+        <h2>2022 HNY及以后版本的更新日志请戳：<a style="color:black;" href="https://gitee.com/fangcatchina/FCUOS/releases/">Gitee</a><a style="color:black;" href='https://github.com/FangcatChina/FCUOS/releases'>Github</a></h2>
         <hr>
         <h2>FCUOS 2021 Re Designed</h2>
         <p style="color: green;">|正式版| |较大更新| |主题更新|</p>
