--- a/cdn/gitalk.html
+++ b/cdn/gitalk.html
@@ -1,13 +1,30 @@
 <div id="gitalk-container"></div>
 
 <script>
-
+         function getPar(par){
+            //获取当前URL
+            var local_url = document.location.href;
+            //获取要取得的get参数位置
+            var get = local_url.indexOf(par +"=");
+            if(get == -1){
+                return false;
+            }
+            //截取字符串
+            var get_par = local_url.slice(par.length + get + 1);
+            //判断截取后的字符串是否还有其他get参数
+            var nextPar = get_par.indexOf("&");
+            if(nextPar != -1){
+                get_par = get_par.slice(0, nextPar);
+            }
+            return get_par;
+        }
   var gitalk = new Gitalk({
     clientID: '21d7fb822b4454e44d82',
     clientSecret: '91c0a72f04b7fa82c597d9aa098a40e26b6f1c6e',
     repo: 'Comment',
     owner: 'FangcatChina',
     admin: ['FangcatChina'],
+    id : gerPar(id),
     distractionFreeMode: false  // Facebook-like distraction free mode
   })
 
