--- a/cdn/gitalk.html
+++ b/cdn/gitalk.html
@@ -24,7 +24,7 @@
     repo: 'Comment',
     owner: 'FangcatChina',
     admin: ['FangcatChina'],
-    id : gerPar(id),
+    id : gerPar("id"),
     distractionFreeMode: false  // Facebook-like distraction free mode
   })
 
