--- a/cdn/gitalk.html
+++ b/cdn/gitalk.html
@@ -1,3 +1,5 @@
+<html>
+         <body target="_parent">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 <div id="gitalk-container"></div>
@@ -30,3 +32,5 @@
   gitalk.render('gitalk-container')
 
 </script>
+         </body>
+</html>
