--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
-<!--本页面来自404.life,thanks!-->
+<!--之前的404页面来自404.life,thanks!-->
 <!DOCTYPE HTML>
+<!--之前的404
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -10,18 +11,18 @@
 <body>
 <div class="box">
 
-
-	<!-- <div class="box_nofound_wrap">
-		<div class="box_nofound_content">
-			<p class="nofound_img_warp"></p>
-			<div class="nofound_text">很抱歉，您访问的页面不存在！</div>
-			<div class="nofound_text">请仔细检查您输入的网址是否正确。</div>
-			<a class="nofound_link" href="https://404.life" >返回首页</a>
-		</div>
-	</div> -->
-
 <div class='newContent'>			<p><br/></p><p><br/></p><p><br/></p><p><br/></p><p><br/></p>			<p style='text-align:center;'><img src='/pageNotFound.png' alt=''></img></p>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>很抱歉，您访问的页面不存在！</div>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>请仔细检查您输入的网址是否正确。</div>			<a href='/index.html' style='text-align:center; color:#333; font-size:13px; text-decoration:none; width:100px; height:32px; line-height:32px; border:1px solid #E3E2E8; display:block; margin:30px auto;'>返回首页</a>			<p><br/>		</p></div>
 
 
 </div>
 </body>
+-->
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>404，页面去哪了？</title>
+		<script src="https://volunteer.cdn-go.cn/404/latest/404.js"></script>
+		<p>本页面已接入404公益</p>
+	</head>
+</html>
+		
